--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.2.1",
+    "apollo-server-micro": "^2.18.1",
+    "graphql-tag": "^2.11.0",
     "next": "latest",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
