--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "apollo-server-micro": "^2.18.1",
     "graphql-tag": "^2.11.0",
     "next": "latest",
+    "playwright": "^1.4.2",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-is": "^16.8.0",
