--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "dependencies": {
     "@apollo/client": "^3.2.1",
     "apollo-server-micro": "^2.18.1",
+    "chrome-aws-lambda": "^5.3.1",
     "graphql-tag": "^2.11.0",
     "next": "latest",
-    "playwright": "^1.4.2",
+    "puppeteer": "^5.3.1",
+    "puppeteer-core": "^5.3.1",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-is": "^16.8.0",
