--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
   "dependencies": {
     "@apollo/client": "^3.2.1",
     "apollo-server-micro": "^2.18.1",
-    "chrome-aws-lambda": "^5.3.1",
+    "chrome-aws-lambda": "2.1.1",
     "graphql-tag": "^2.11.0",
     "next": "latest",
-    "puppeteer": "^5.3.1",
-    "puppeteer-core": "^5.3.1",
+    "puppeteer-core": "2.1.1",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-is": "^16.8.0",
     "styled-components": "^5.0.0"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.8.0"
+    "babel-plugin-styled-components": "^1.8.0",
+    "puppeteer": "^5.3.1"
   },
   "license": "MIT"
 }
