feat: add initial list of ships

--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "chrome-aws-lambda": "2.1.1",
     "graphql-tag": "^2.11.0",
     "next": "latest",
+    "prop-types": "^15.7.2",
     "puppeteer-core": "2.1.1",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-is": "^16.8.0",
-    "styled-components": "^5.0.0"
+    "styled-components": "^5.2.0"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.8.0",
+    "babel-plugin-styled-components": "^1.11.1",
     "puppeteer": "^5.3.1"
   },
   "license": "MIT"
