--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "with-styled-components",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "scripts": {
     "dev": "next",
     "build": "next build",
@@ -8,10 +8,12 @@
   },
   "dependencies": {
     "@apollo/client": "^3.2.1",
+    "@material-ui/core": "^4.11.0",
     "apollo-server-micro": "^2.18.1",
     "chrome-aws-lambda": "2.1.1",
     "graphql-tag": "^2.11.0",
     "next": "latest",
+    "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
     "puppeteer-core": "2.1.1",
     "react": "^16.8.0",
