--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@apollo/client": "^3.2.1",
     "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "apollo-server-micro": "^2.18.1",
     "chrome-aws-lambda": "2.1.1",
     "graphql-tag": "^2.11.0",
